--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="payment-summary-divider"></div>
                         <div class="payment-summary-item payment-summary-total">
                             <div class="payment-summary-name">Total</div>
-                            <div class="payment-summary-price">-$10</div>
+                            <div class="payment-summary-price">$99</div>
                     </div>
                 </div>
             </div>
